--- a/index.html
+++ b/index.html
@@ -8,11 +8,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button class="estrelaBotao1"></button>
+    
     <div class="fundo">
         <p> </p>
     </div>
-    <div class="quadradoprincipal">
-
+    <div class="quadradoprincipal">  
+        <div class="titulo">
+        <img src="./img/Inserir_um_título-removebg-preview (1).png" alt="Soundifytitulo">
     </div>
+    </div>
+    <div class="barradepesquisa"> 
+        <div class="lupa">
+        <img src="./img/lupa.png" alt="lupa">
+    </div>
+    </div>
+    <div class="linhavertical">
+    </div>
+
+     
+   
+  
 </body>
 </html>
